--- a/package.json
+++ b/package.json
@@ -65,5 +65,15 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".postcssrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/annethinku/vuecrm.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/annethinku/vuecrm/issues"
+  },
+  "homepage": "https://github.com/annethinku/vuecrm#readme"
 }
